<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="appName">Weather</string>

  <string name="help">Help</string>
  <string name="about">About</string>

  <string name="temp">Temperature</string>
  <string name="cent">°Centigrade</string>
  <string name="fahr">°Fahrenheit</string>

  <string name="noGeo">No Geocoder</string>
  <string name="noAddr">No address</string>
  <string name="noData">No weather data</string>

  <string name="centigrade">%s°C</string>
  <string name="fahrenheit">%s°F</string>
  <string name="precipitation">Precipitation: %s</string>
  <string name="humidity">Humidity: %s</string>

  <string name="version" formatted="false"><a
  href="https://github.com/billthefarmer/solver/releases/latest">%s</a>\n\nBuilt
  %s\n\nCopyright \u00A9 2022 <a
  href="https://github.com/billthefarmer">Bill Farmer</a>\n\nLicence
  <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

</resources>
