<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

  <item
      android:id="@+id/help"
      android:icon="@drawable/ic_action_help"
      android:showAsAction="ifRoom"
      android:title="@string/help" />

  <item
      android:id="@+id/about"
      android:icon="@drawable/ic_action_about"
      android:showAsAction="ifRoom"
      android:title="@string/about" />

  <item
      android:id="@+id/temp"
      android:showAsAction="never"
      android:title="@string/temp">
    <menu>

      <item
          android:id="@+id/cent"
          android:showAsAction="never"
          android:title="@string/cent" />

      <item
          android:id="@+id/fahr"
          android:showAsAction="never"
          android:title="@string/fahr" />

    </menu>
  </item>

</menu>
